--- a/style.css
+++ b/style.css
@@ -1,14 +1,14 @@
 
 ::-webkit-scrollbar {
-    width: 2px;
+    width: 10px;
 }
 
 ::-webkit-scrollbar-track {
-    background-color: #2c2c31;
+    background-color: #171717;
 }
 
 ::-webkit-scrollbar-thumb {
-    background-color: transparent;
+    background-color: #2c2c31;
 }
 
 body {
@@ -35,6 +35,7 @@ nav {
     margin: 49px 64px;
 }
 
+
 #logo img {
     width: 85px;
 }
@@ -52,7 +53,13 @@ nav {
     text-decoration: none;
     text-transform: uppercase;
     font-size: 12px;
+    
 }
+
+.page nav a:hover{
+    text-decoration: underline;
+}
+
 
 main {
     display: flex;
@@ -87,6 +94,7 @@ h1 {
     font-size: 172px;
     max-width: 883px;
     font-weight: 800;
+    margin-bottom: 20px;
 }
 
 gap {
@@ -94,10 +102,15 @@ gap {
   }
   
 
+.texto1{
+    position: relative;
+    bottom: 50px;
+}
+
 #homem img {
     position: relative;
-    top: 50px;
-    right: 160px;
+    top: 70px;
+    right: 146px;
 }
 
 #blocorun {
@@ -107,8 +120,8 @@ gap {
     height: 110px;
 
     position: relative;
-    bottom: 280px;
-    right: 290px;
+    bottom: 246px;
+    right: 260px;
 }
 
 #blocorun img {
@@ -151,8 +164,8 @@ gap {
     height: 96px;
 
     position: relative;
-    top: 120px;
-    right: 900px;
+    top: 150px;
+    right: 859px;
 }
 
 #blocovideo img {
@@ -191,8 +204,8 @@ gap {
     height: 98px;
 
     position: relative;
-    top: 220px;
-    right: 640px;
+    top: 235px;
+    right: 598px;
 
 }
 
@@ -241,6 +254,9 @@ section p {
     border-radius: 10px;
     width: 200px;
     margin-bottom: 112px;
+    
+    position: relative;
+    bottom: 30px;
 
     display: flex;
     align-items: center;
@@ -290,6 +306,7 @@ button:hover {
     overflow-x: auto;
     padding-bottom: 52px;
 }
+
 
 .card {
     background-color: #323443;
@@ -350,7 +367,7 @@ button:hover {
 }
 
 .text2 h2 {
-    max-width: 526px;
+    max-width: 590px;
     font-size: 40px;
 
 }
@@ -359,6 +376,12 @@ button:hover {
     font-size: 14px;
     max-width: 480px;
 }
+
+.relaxa article{
+    position: relative;
+    left: 80px;
+}
+
 
 .conteudo3 {
     display: flex;
@@ -482,7 +505,7 @@ button:hover {
     font-weight: 500;
     font-style: normal;
     
-    margin: 28px 320px 75px 68px;
+    margin: 28px 320px 75px 43px;
 
     border: none;
     background-color: #0070C9;
